--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -41,3 +41,74 @@
     width: 80px;
     height: 80px;
 }
+
+#live-img{
+    width: 80px;
+    height: 40px;
+    margin-top: 10px;
+}
+
+.game-status{
+    margin-bottom: 0;
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 1.25rem;
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+}
+#toolbar{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin: auto;
+    width: fit-content;
+
+}
+.toolbar-button{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 120px;
+    height: 40px;
+    background-color: gray; 
+    border-radius: 15px;
+    line-height: 40px;
+    font-weight: bold;
+}
+
+.toolbar-button:hover{
+    background-color: rgba(128, 128, 128, 0.7);
+}
+
+.toolbar-button-selected{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 120px;
+    height: 40px;
+    background-color: rgb(159, 164, 255); 
+    border-radius: 15px;
+    line-height: 40px;
+    font-weight: bold;
+}
+
+.toolbar-button-selected:hover{
+    background-color: rgb(159, 164, 255,0.7); 
+}
+
+.playList{
+    display: flex;
+    flex-direction: column;
+    gap:15px;
+    margin-bottom: 50px;
+}
+
+.playCard{
+
+    border: 3px solid black;
+    width: 70%;
+    min-width: 200px;
+    margin: auto;
+    
+}
+
+
+
