--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -3,17 +3,41 @@
     width: 100px;
     height: 50px;
 }
+.Game{
+    background-color: white;
+}
+.Game-dark{
+    background-color: black;
+}
 
 .gameList{
     display: flex;
     flex-direction: column;
     gap:15px;
     margin-bottom: 50px;
+    max-height: 70vh;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    overflow-y: scroll;
+}
+.gameList::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
 }
 
 .gameCard{
 
     background-color: gray;
+    border-radius: 25px;
+    border: 3px solid black;
+    width: 70%;
+    min-width: 200px;
+    margin: auto;
+    box-shadow: 5px 5px 10px 1px;
+    
+}
+.gameCardFUT{
+
+    background-color: rgb(181, 97, 97);
     border-radius: 25px;
     border: 3px solid black;
     width: 70%;
@@ -68,7 +92,17 @@
     gap: 20px;
     margin: auto;
     width: fit-content;
+    background-color: white; 
+    border: 1px solid black;
 
+}
+#back-arrow{
+    width: 40px;
+    height: 40px;
+    margin-top: auto;
+    margin-bottom: auto;
+    border-radius: 50%;
+    border: 2px solid white;
 }
 .toolbar-button{
     margin-top: 10px;
@@ -105,6 +139,16 @@
     flex-direction: column;
     margin-bottom: 50px;
 }
+#playList-container{
+    max-height: 80vh;
+    overflow-y: scroll;
+    padding-bottom: 10px;
+
+}
+#playList-container::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
+}
+
 
 .play-card{
     display: flex;
@@ -114,6 +158,18 @@
     margin: auto;
     color: gray;
     height: 90px;
+    background-color: white;
+    
+}
+.play-card-dark{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    min-width: 200px;
+    margin: auto;
+    color: white;
+    height: 90px;
+    background-color: black;
     
 }
 .right-card{
@@ -135,6 +191,31 @@
     font-weight: bold;
     color: black;
 }
+.card-description-dark{
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: white;
+}
+.card-description-body-dark
+{
+    font-size: 1rem;
+    color: white;
+}
+.card-description-body
+{
+    font-size: 1rem;
+    color: black;
+}
+.card-description-basic{
+    font-size: 1rem;
+    color: black;
+    font-weight: bold;
+}
+.card-description-basic-dark{
+    font-size: 1rem;
+    color: white;
+    font-weight: bold;
+}
 
 .card-description-goal{
     font-size: 1.25rem;
@@ -151,15 +232,25 @@
     border-radius: 10px;
     border: 2px solid rgb(200, 200, 200);
     padding:5px 10px;
-
+    width: 60px;
     font-weight: bold;
     color: black;
 }
+.time-remaining-text-dark{
+    border-radius: 10px;
+    border: 2px solid rgb(200, 200, 200);
+    padding:5px 10px;
+    width: 60px;
+    font-weight: bold;
+    color: white;
+}
+
 .time-remaining-text-goal{
     border-radius: 10px;
     padding:5px 10px;
+    border: 2px solid white;
     background-color: white;
-
+    width: 60px;
     font-weight: bold;
     color: black;
 }
@@ -172,6 +263,16 @@
     margin: auto;
     height: 90px;
 }
+
+.play-card-basic-dark{
+    display: flex;
+    background-color: rgb(70, 70, 70);
+    width: 80%;
+    min-width: 200px;
+    margin: auto;
+    height: 90px;
+}
+
 .middle-basic-card{
     height: fit-content;
     margin:auto
@@ -269,7 +370,101 @@ p{
     margin-left: 20px;
     margin-right: 20px;
 }
+#period-indicator{
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    background-color: gray;
+    width: 80%;
+    margin:auto;
+    height: 50px;
+    line-height: 50px;
+    color: white;
+    font-weight: bold;
+    font-size: 1.25rem;
+}
 
+.mode-button-light{
+    color: black;
+    background-color: white;
+    border: 2px solid gray;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100px;
+    height: 40px;
+    border-radius: 15px;
+    line-height: 40px;
+    font-weight: bold;
+    
+}
+
+.mode-button-dark{
+    color: white;
+    background-color: black;
+    border: 2px solid gray;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100px;
+    height: 40px;
+    border-radius: 15px;
+    line-height: 40px;
+    font-weight: bold;
+}
+
+#score-board{
+    margin: auto;
+    border-radius: 5px;
+    border: 1px solid gray;
+    width: 80%;
+    background-color: rgb(241, 241, 241);
+}
+.score-board-info{
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: fit-content;
+    color: black;
+    font-size: 1rem;
+}
+.score-board-location{
+    margin-top: 0;
+    padding-bottom: 0;
+}
+.score-board-name{
+    margin-top: 0;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.score-board-sog{
+    margin-top: 0;
+    color: gray;
+}
+#score-board-container{
+    display: flex;
+    flex-direction: row;
+    width:fit-content;
+    margin: auto;
+}
+.score-board-score{
+    font-weight: 800;
+    font-size: 3.5rem;
+    padding-left: 8%;
+    padding-right: 8%;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.score-board-logo{
+    width: 100px;
+    height: 100px;
+    margin-top:auto;
+    margin-bottom: auto;
+}
+
+#display{
+    padding-top: 20px;
+}
 /* need to add the rest */
 #color-ANA{
     background-color: rgba(252, 76, 2);
