--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -10,6 +10,9 @@
     background-color: black;
 }
 
+
+/* * * * * * * * * * * * * * * * * * * * * * * * Home.js Component * * * * * * * * * * * * * * * * * * * * * * * */
+
 .gameList{
     display: flex;
     flex-direction: column;
@@ -72,6 +75,29 @@
     height: 40px;
     margin-top: 10px;
 }
+
+#home-date-container{
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: fit-content;
+    background-color: rgba(221, 233, 244);
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+}
+#home-date{
+    font-size: 2rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: black;
+    padding-bottom: 0;
+}
+
+/* * * * * * * * * * * * * * * * * * * * * * * * Game.js Component * * * * * * * * * * * * * * * * * * * * * * * */
+
+
 #whistle-img{
     width: 50px;
     height: 30px;
@@ -91,28 +117,41 @@
     flex-direction: row;
     gap: 20px;
     margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
     width: fit-content;
     background-color: white; 
-    border: 1px solid black;
+    border: 2px solid black;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 150px;
+    padding-left: 40px;
+    padding-right: 40px;
+    border-radius: 10px;
+    /*background-position: 0 50%;*/
 
 }
 #back-arrow{
-    width: 40px;
-    height: 40px;
+    width: auto;
+    height: 50%;
     margin-top: auto;
     margin-bottom: auto;
     border-radius: 50%;
     border: 2px solid white;
 }
 .toolbar-button{
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
     width: 120px;
-    height: 40px;
+    height: 100%;
     background-color: gray; 
-    border-radius: 15px;
+    /*border-radius: 15px;*/
     line-height: 40px;
     font-weight: bold;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    font-size: 1.25rem;
+    
 }
 
 .toolbar-button:hover{
@@ -120,18 +159,47 @@
 }
 
 .toolbar-button-selected{
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
     width: 120px;
-    height: 40px;
+    height: 100%;
     background-color: rgb(159, 164, 255); 
-    border-radius: 15px;
     line-height: 40px;
     font-weight: bold;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    font-size: 0;
 }
 
 .toolbar-button-selected:hover{
     background-color: rgb(159, 164, 255,0.7); 
+}
+
+.mode-button-light{
+    color: black;
+    background-color: white;
+    border: 2px solid gray;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 100px;
+    height: 60%;
+    border-radius: 15px;
+    line-height: 40px;
+    font-weight: bold;
+    
+}
+
+.mode-button-dark{
+    color: white;
+    background-color: black;
+    border: 2px solid gray;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 100px;
+    height: 60%;
+    border-radius: 15px;
+    line-height: 40px;
+    font-weight: bold;
 }
 
 .playList{
@@ -384,32 +452,7 @@ p{
     font-size: 1.25rem;
 }
 
-.mode-button-light{
-    color: black;
-    background-color: white;
-    border: 2px solid gray;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 100px;
-    height: 40px;
-    border-radius: 15px;
-    line-height: 40px;
-    font-weight: bold;
-    
-}
 
-.mode-button-dark{
-    color: white;
-    background-color: black;
-    border: 2px solid gray;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 100px;
-    height: 40px;
-    border-radius: 15px;
-    line-height: 40px;
-    font-weight: bold;
-}
 
 #score-board{
     margin: auto;
@@ -459,6 +502,17 @@ p{
     width: 100px;
     height: 100px;
     margin-top:auto;
+    margin-bottom: auto;
+}
+.cg-logo-1{
+    width: 300px;
+    height: auto;
+    padding-top: 20px;
+}
+.cg-logo-small{
+    width: auto;
+    height: 60%;
+    margin-top: auto;
     margin-bottom: auto;
 }
 
