--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -294,6 +294,18 @@
     max-width: 850px;
 }
 
+#player-highlight-message{
+    width: fit-content;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 3rem;
+    font-weight:800;
+    margin: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    -webkit-text-stroke: 2px black;
+}
+
 /* * * * * * * * * * * * * * * * * * * * * * * * PlayerCard.js Component * * * * * * * * * * * * * * * * * * * * * * * */
 
 .PlayerCard{
@@ -595,7 +607,7 @@
 }
 
 .toolbar-logo{
-    width: 60%;
+    width: 65%;
     height:50%;
     padding:5px;
     border-radius: 5px;
@@ -913,6 +925,7 @@ p{
     font-weight: bold;
     font-size: 1.25rem;
 }
+/* * * * * * * * * * * * * * * Score board * * * * * * * * * */
 
 #score-board-retro{
     margin: auto;
@@ -923,11 +936,21 @@ p{
     background-color: rgb(30, 30, 30);
     display: flex;
     flex-direction: row;
+    /*resize: vertical; */
+    resize: none;
+    overflow: hidden;
+    min-height: 130px;
+    max-height: 400px;
+
+    container-name: scoreboard;
+    container-type: size;
+    
 }
 #score-board-retro-hidden{
     margin: auto;
     border-radius: 10px;
     height:29px;
+    max-height: 29px;
     border: 4px solid gray;
     width: 80%;
     background-color: rgb(30, 30, 30);
@@ -979,7 +1002,7 @@ p{
     /*padding-left: 50px;*/
     padding-right: 10px;
     padding-bottom: 0;
-    margin-top: auto;
+    margin-top: 0;
     margin-bottom: auto;
     background-color: black;
     margin-left: auto;
@@ -1006,6 +1029,7 @@ p{
     background-color: black;
     margin-left: auto;
     margin-right: auto;
+    
 }
 
 #score-board{
@@ -1029,8 +1053,26 @@ p{
 
     /* mainly for retro*/
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-style: italic
+    font-style: italic;
+    
 }
+.score-board-info-middle{
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;
+    color: white;
+    font-size: 1rem;
+
+    /* mainly for retro*/
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-style: italic;
+    
+}
+
 .score-board-location{
     margin-top: 0;
     padding-bottom: 0;
@@ -1061,8 +1103,11 @@ p{
 }
 
 .score-board-logo{
-    width: 100px;
-    height: 100px;
+    min-width: 100px;
+    min-height: 100px;
+    max-height: 200px;
+    width:auto;
+    height:60%;
     margin-top:auto;
     margin-bottom: auto;
     margin-left: auto;
@@ -1084,6 +1129,95 @@ p{
 
 #display{
     padding-top: 20px;
+}
+
+/* as user resizes scoreboard */
+@container scoreboard (height > 300px) {
+    .score-board-score-retro {
+      font-size: 5rem;
+    }
+    .score-board-info{
+        font-size: 2rem;
+    }
+    .score-board-name{
+        font-size: 3rem;
+    }
+    .score-board-period-container-retro{
+        margin-top: 30px;
+        margin-bottom: auto;
+    }
+    #score-board-period-retro{
+        font-size: 5rem;
+    }
+    .score-board-period-label-retro{
+        font-size: 3rem;
+    }
+
+    #game-clock{
+        font-size: 5rem;
+        border-top: 4px solid gray;
+        margin-top: auto;
+    }
+}
+@media only screen and (min-width: 1400px){
+    #score-board-retro{
+        resize: vertical;
+    }
+}
+
+@container scoreboard (height > 300px) {
+    .score-board-score-retro {
+      font-size: 5rem;
+    }
+    .score-board-info{
+        font-size: 2rem;
+    }
+    .score-board-name{
+        font-size: 3rem;
+    }
+    .score-board-period-container-retro{
+        margin-top: 30px;
+        margin-bottom: auto;
+    }
+    #score-board-period-retro{
+        font-size: 5rem;
+    }
+    .score-board-period-label-retro{
+        font-size: 3rem;
+    }
+
+    #game-clock{
+        font-size: 5rem;
+        border-top: 4px solid gray;
+        margin-top: auto;
+    }
+}
+@container scoreboard (height > 200px) and (height < 300px){
+    .score-board-score-retro {
+      font-size: 4rem;
+    }
+    .score-board-info{
+        font-size: 1.5rem;
+    }
+    .score-board-name{
+        font-size: 2.5rem;
+    }
+    .score-board-period-container-retro{
+        margin-top: 30px;
+        margin-bottom: auto;
+    }
+    #score-board-period-retro{
+        font-size: 4rem;
+    }
+    .score-board-period-label-retro{
+        font-size: 2.5rem;
+    }
+
+    #game-clock{
+        font-size: 4rem;
+        border-top: 4px solid gray;
+        margin-top: auto;
+    }
 }
 
 /*********************** Progress Bar *************************/
