--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -133,6 +133,16 @@
     margin-left: auto;
     margin-right: auto;
 }
+.team-select-container{
+    position: relative;
+    display: inline-block;
+    width: 80%;
+    max-width: 850px;
+    min-width: 300px;
+    height: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .player-select{
     position: absolute;
@@ -223,6 +233,16 @@
     margin-left: auto;
     margin-right: auto;
 }
+.team-stat-select-container{
+    position: relative;
+    display: inline-block;
+    width: 80%;
+    max-width: 850px;
+    min-width: 300px;
+    height: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .stat-option{
     display: flex;
@@ -304,6 +324,14 @@
     margin-right: auto;
     color: white;
     -webkit-text-stroke: 2px black;
+}
+
+.player-focus-button-container{
+    display: flex;
+    flex-direction: row;
+    gap:10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* * * * * * * * * * * * * * * * * * * * * * * * PlayerCard.js Component * * * * * * * * * * * * * * * * * * * * * * * */
