--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -179,7 +179,7 @@
     width:70px;
     margin-right: 20px;
     margin-left: auto;
-    object-fit: cover
+    object-fit: fit;/*changed from fill */
 }
 .player-option-text{
     line-height: 50px;
@@ -336,6 +336,21 @@
 
 /* * * * * * * * * * * * * * * * * * * * * * * * PlayerCard.js Component * * * * * * * * * * * * * * * * * * * * * * * */
 
+.PlayerCard1{
+    height:fit-content;
+    width: 80%;
+    background-color: white;
+    border-radius: 15px;
+    border: 4px solid black;
+    display:flex;
+    flex-direction: column;
+    margin:auto;
+    z-index: 1;
+    /*resize: none;*/
+    /*overflow: hidden;*/
+    container-name: playercard;
+    container-type: size;
+}
 .PlayerCard{
     height:fit-content;
     width: 80%;
@@ -461,6 +476,20 @@
     position: absolute;
     z-index: 3;
 }
+.PlayerCard1-dark{
+    height:fit-content;
+    width: 80%;
+    background-color: black;
+    border-radius: 15px;
+    border: 4px solid white;
+    display:flex;
+    flex-direction: column;
+    margin:auto;
+    /*resize: none;*/
+    /*overflow: hidden;*/
+    container-name: playercard;
+    container-type: size;
+}
 .PlayerCard-dark{
     height:fit-content;
     width: 80%;
@@ -511,6 +540,19 @@
     
 }
 
+/* This doesn't work as intended, need to fix */
+/* as user resizes plyaercard & teamcard */
+@container playercard (width > 800px) {
+    .PlayerCard1
+    {
+        resize: both;
+    }
+    .PlayerCard1-dark
+    {
+        resize: both;
+    }
+
+}
 /* * * * * * * * * * * * * * * * * * * * * * * * Game.js Component * * * * * * * * * * * * * * * * * * * * * * * */
 
 
